==> zzzemb/Dual-FOC-Self-Balancing-Car/software/keil/bsp/oled/OLED.c <==
#include "main.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_USE_SW_I2C
#define OLED_SCL            GPIO_PIN_13
#define OLED_SDA            GPIO_PIN_14
#define OLED_SCL_GPIO_Port  GPIOC
#define OLED_SDA_GPIO_Port  GPIOC
#define OLED_I2C            hi2c1
#define OLED_ADDRESS 0x3C << 1
#define OLED_I2C_TIMEOUT 10
#define Delay_time 3

void OLED_W_SCL(uint8_t BitValue)
{
	
	HAL_GPIO_WritePin(OLED_SCL_GPIO_Port, OLED_SCL, (GPIO_PinState)BitValue);
    for (volatile uint16_t i = 0; i < Delay_time; i++){
       
    }
}

void OLED_W_SDA(uint8_t BitValue)
{

	HAL_GPIO_WritePin(OLED_SDA_GPIO_Port, OLED_SDA, (GPIO_PinState)BitValue);
	
	for (volatile uint16_t i = 0; i < Delay_time; i++){
       
    }
}

void OLED_GPIO_Init(void)
{
    uint32_t i, j;

    for (i = 0; i < 1000; i++) {
        for (j = 0; j < 1000; j++)
            ;
    }
#ifdef OLED_USE_SW_I2C
    __HAL_RCC_GPIOC_CLK_ENABLE();		
    __HAL_RCC_GPIOA_CLK_ENABLE();       
	GPIO_InitTypeDef GPIO_InitStruct = {0};            
 	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;	       
    GPIO_InitStruct.Pull = GPIO_PULLUP;                
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;  
	GPIO_InitStruct.Pin = SW_I2C_SDA_Pin;                
 	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SW_I2C_SCL_Pin;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

	OLED_W_SCL(1);
	OLED_W_SDA(1);
#endif
}

void OLED_ShowChar(uint8_t X, uint8_t Y, char Char, uint8_t FontSize)
{
    if (FontSize == OLED_8X16) 
    {
         
        OLED_ShowImage(X, Y, 8, 16, OLED_F8x16[Char - ' ']);
    } else if (FontSize == OLED_6X8) 
    {
         
        OLED_ShowImage(X, Y, 6, 8, OLED_F6x8[Char - ' ']);
    }
}
