==> Eureka12138github/gitstm32/01-Basic/4-3 轻量型OLED UI（待优化）/Hardware/OLED.c <==
#include "OLED.h"
#include "OLED_Fonts.h"     // OLED字体库头文件
#include <stdio.h>
#include <stdarg.h>
#include <string.h>
#include <math.h>

void OLED_W_SCL(uint8_t BitValue)
{
    GPIO_WriteBit(OLED_GPIO_PORT, OLED_SCL_PIN, (BitAction)BitValue);
    // 可根据 MCU 速度添加延时以满足 I2C 时序要求
}

void OLED_W_SDA(uint8_t BitValue)
{
    GPIO_WriteBit(OLED_GPIO_PORT, OLED_SDA_PIN, (BitAction)BitValue);
    // 可根据 MCU 速度添加延时以满足 I2C 时序要求
}

void OLED_GPIO_Init(void)
{
    uint32_t i, j;
    
    // 延时等待电源稳定
    for (i = 0; i < 1000; i++)
        for (j = 0; j < 1000; j++);

    RCC_APB2PeriphClockCmd(OLED_GPIO_CLK, ENABLE);

    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Pin = OLED_SCL_PIN;
    GPIO_Init(OLED_GPIO_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = OLED_SDA_PIN;
    GPIO_Init(OLED_GPIO_PORT, &GPIO_InitStructure);

    // 释放 I2C 总线（SCL 和 SDA 拉高）
    OLED_W_SCL(1);
    OLED_W_SDA(1);
}

void OLED_ShowChar(int16_t X, int16_t Y, char Char, uint8_t FontSize)
{
    if (FontSize == OLED_8X16_HALF)        // 字体为宽8像素，高16像素
    {
        /* 将ASCII字模库OLED_F8x16的指定数据以8*16的图像格式显示 */
        OLED_ShowImage(X, Y, 8, 16, OLED_8x16[Char - ' ']);
    }
    else if(FontSize == OLED_6X8_HALF)    // 字体为宽6像素，高8像素
    {
        /* 将ASCII字模库OLED_F6x8的指定数据以6*8的图像格式显示 */
        OLED_ShowImage(X, Y, 6, 8, OLED_6x8[Char - ' ']);
    }
    else if(FontSize == OLED_7X12_HALF)    // 字体为宽7像素，高12像素
    {
        /* 将ASCII字模库OLED_F7x12的指定数据以7*12的图像格式显示 */
        OLED_ShowImage(X, Y, 7, 12, OLED_7x12[Char - ' ']);
    }
}
